[tool.poetry]
name = "hack-the-insurance"
version = "0.1.0"
description = ""
authors = ["oguzhankir <oguzhankir17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
